apps/truenas-gotify-adapter/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: truenas-gotify-adapter
  namespace: truenas-gotify-adapter
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: truenas-gotify-adapter
  template:
    metadata:
      labels:
        app: truenas-gotify-adapter
    spec:
      containers:
      - name: truenas-gotify-adapter
        image: jwschman/truenas-gotify:main
        imagePullPolicy: Always
        ports:
        - containerPort: 31662
