apps/truenas-gotify-adapter/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas-gotify-adapter
  namespace: truenas-gotify-adapter
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - "truenas-gotify-adapter.pawked.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: truenas-gotify-adapter
          port: 31662
          kind: Service
          group: ''
          weight: 1
